Fixed quote processing saving

--- a/Chat.API/appsettings.json
+++ b/Chat.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=database;database=chat;user id=sa;password=Pass123$"
+    "DefaultConnection": "server=database;database=chat-data;user id=sa;password=Pass123$"
   }
 }
