--- a/Identity/appsettings.json
+++ b/Identity/appsettings.json
@@ -12,6 +12,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=database;database=chat;user id=sa;password=Pass123$"
+    "DefaultConnection": "server=database;database=chat-configuration;user id=sa;password=Pass123$"
   }
 }
