--- a/Chat/Chat.csproj
+++ b/Chat/Chat.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Chat.Shared\Chat.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Update="Pages\ChatRoom.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
